--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ ASSETS_ROOT=/static/assets
 
 # For MySql Persistence (change accordingly)
 DB_ENGINE=mysql
-DB_NAME=schooldjango
-DB_HOST=localhost
+DB_NAME= #DATABASE name
+DB_HOST=localhost 
 DB_PORT=3306
-DB_USERNAME=root
-DB_PASS=123456789
+DB_USERNAME= #username of SGBD
+DB_PASS= #password of SGBD
