--- a/.env
+++ b/.env
@@ -4,8 +4,18 @@ ASSETS_ROOT=/static/assets
 
 # For MySql Persistence (change accordingly)
 DB_ENGINE=mysql
-DB_NAME= #DATABASE name
+DB_NAME= schooldjango
 DB_HOST=localhost 
 DB_PORT=3306
-DB_USERNAME= #username of SGBD
-DB_PASS= #password of SGBD
+DB_USERNAME= root
+DB_PASS=123456789
+
+
+#for mail
+
+EMAIL_HOST = 'sandbox.smtp.mailtrap.io'
+EMAIL_HOST_USER = '853fa0a70856db'
+EMAIL_HOST_PASSWORD = '57de888d52fe80'
+EMAIL_PORT = '2525'
+EMAIL_USE_TLS = True
+EMAIL_USE_SSL = False
