--- a/.env
+++ b/.env
@@ -4,18 +4,18 @@ ASSETS_ROOT=/static/assets
 
 # For MySql Persistence (change accordingly)
 DB_ENGINE=mysql
-DB_NAME= schooldjango
+DB_NAME= #your database name
 DB_HOST=localhost 
 DB_PORT=3306
-DB_USERNAME= root
-DB_PASS=123456789
-
+DB_USERNAME= #your database username
+DB_PASS=#your database password 
 
 #for mail
 
-EMAIL_HOST = 'sandbox.smtp.mailtrap.io'
-EMAIL_HOST_USER = '853fa0a70856db'
-EMAIL_HOST_PASSWORD = '57de888d52fe80'
-EMAIL_PORT = '2525'
+EMAIL_HOST = #your email host
+EMAIL_HOST_USER = #your email user host
+EMAIL_HOST_PASSWORD = #your email password host
+EMAIL_PORT = #your email port
+#for security raisons
 EMAIL_USE_TLS = True
 EMAIL_USE_SSL = False
